--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "jooker",
   "scripts": {
     "dev": "vuepress dev . --open --host \"localhost\"",
-    "build": "vuepress build ."
+    "build": "vuepress build .",
+    "deploy-gh": "GH=1 yarn build && bash deploy.sh"
   },
   "devDependencies": {
     "vuepress": "1.5.4",
