--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy-gh": "GH=1 yarn build && bash deploy.sh"
   },
   "devDependencies": {
-    "vuepress": "1.5.4",
+    "vuepress": "^1.7.1",
     "vuepress-theme-reco": "1.5.7"
   },
   "dependencies": {
