--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
   - yarn deploy-gh # npm run docs:build
 deploy:
   provider: pages
-  skip_cleanup: true
+  cleanup: true
   local_dir: public
-  github_token: GH_TOKEN # 在 GitHub 中生成，用于允许 Travis 向你的仓库推送代码。在 Travis 的项目设置页面进行配置，设置为 secure variable
-  target-branch: gh-pages
+  token: GH_TOKEN # 在 GitHub 中生成，用于允许 Travis 向你的仓库推送代码。在 Travis 的项目设置页面进行配置，设置为 secure variable
+  target_branch: gh-pages
   keep_history: true
   on:
     branch: master
