--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
   "dependencies": {
     "vue-class-component": "^7.2.3"
   },
-  "description": "一只前端哈狗的日常"
+  "description": "There is no punchline. It’s not a joke"
 }
