--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "vuepress": "^1.7.1",
+    "vuepress-plugin-flowchart": "^1.4.3",
     "vuepress-theme-reco": "1.5.7"
   },
   "dependencies": {
