--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "deploy-gh": "GH=1 yarn build && bash deploy.sh"
   },
   "devDependencies": {
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
     "vuepress": "^1.7.1",
     "vuepress-plugin-flowchart": "^1.4.3",
     "vuepress-theme-reco": "1.5.7"
