--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "deploy-gh": "GH=1 yarn build && bash deploy.sh"
   },
   "devDependencies": {
+    "@vuepress-reco/vuepress-plugin-extract-code": "^1.0.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "vuepress": "^1.7.1",
     "vuepress-plugin-flowchart": "^1.4.3",
-    "vuepress-theme-reco": "1.5.7"
+    "vuepress-theme-reco": "1.6.6"
   },
   "dependencies": {
     "vue-class-component": "^7.2.3"
