--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^4.1.3",
     "vuepress": "^1.8.2",
     "vuepress-plugin-flowchart": "^1.4.3",
+    "vuepress-plugin-mathjax": "^1.2.8",
+    "vuepress-plugin-md-enhance": "^1.23.0",
     "vuepress-theme-reco": "1.5.7"
   },
   "dependencies": {
